[gd_scene load_steps=3 format=3 uid="uid://wax8rcup3weu"]

[ext_resource type="PackedScene" uid="uid://c75unhmng0c4y" path="res://features/cursor/cursor.tscn" id="1_ax1ua"]
[ext_resource type="Script" path="res://features/cursor/god_cursor.gd" id="2_78ldr"]

[node name="GodCursor" instance=ExtResource("1_ax1ua")]
script = ExtResource("2_78ldr")

[connection signal="entity_clicked" from="." to="." method="_on_entity_clicked"]
[connection signal="entity_held" from="." to="." method="_on_entity_held"]
[connection signal="entity_released" from="." to="." method="_on_entity_released"]
